# API-com-Python---FastAPI

./: .gitignore  README.md  about_poetry.md  iniciar_poetry_python.md
.github/: .instructions.md  github-copilot-instructions.md
01-api_assincronas_fastApi/fastApi_blog/: .env  .env.example  INSTRUCOES_EXECUCAO.md  __init__.py  database.py  main.py  pyproject.toml  requirements.txt  security.py
01-api_assincronas_fastApi/fastApi_blog/controllers/: __init__.py  auth.py  post.py
01-api_assincronas_fastApi/fastApi_blog/models/: post_model.py
01-api_assincronas_fastApi/fastApi_blog/schemas/: post.py
01-api_assincronas_fastApi/fastApi_blog/views/: __init__.py
alembic/: env.py
alembic/versions/: 54a1b7fc1ba8_create_posts_table.py
