[project]
name = "fastapi-blog"
version = "0.1.0"
description = "Treinamento para fastAPI em Python"
authors = [
    {name = "Leonardo Soares Gomes",email = "leonardo.gomes@t2mlab.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
